# FaceRecog-1

./: .gitignore  extract_face.py  get_embedding.py  linear_svm.py  main.py  names.tsv  predict_face.py  pyproject.toml
celeb-tsv/: em3.tsv
family-tsv/: em3.tsv  names1.tsv
tsv/: names1.tsv
