[tool.poetry]
name = "facerecog"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
keras = "^2.4.3"
mtcnn = "^0.1.0"
sklearn = "^0.0"
Pillow = "^8.1.2"
matplotlib = "  ^3.1.2"
tensorflow = "^2.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
